[gd_scene load_steps=38 format=2]

[ext_resource path="res://Levels/Level_0/Scripts/Player/PlayerBody2D.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate00.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate01.png" type="Texture" id=3]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate02.png" type="Texture" id=4]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate03.png" type="Texture" id=5]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate04.png" type="Texture" id=6]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate05.png" type="Texture" id=7]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate06.png" type="Texture" id=8]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate07.png" type="Texture" id=9]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate08.png" type="Texture" id=10]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate09.png" type="Texture" id=11]
[ext_resource path="res://Levels/Level_0/Assets/PlayerAnimations/TeleDischarge/disintegrate10.png" type="Texture" id=12]
[ext_resource path="res://Levels/Level_0/Assets/Player/RightForeArmPlayerNaut.png" type="Texture" id=13]
[ext_resource path="res://Levels/Level_0/Assets/Player/RightWristPlayerNaut.png" type="Texture" id=14]
[ext_resource path="res://Levels/Level_0/Assets/Player/RightPalmPlayerNaut.png" type="Texture" id=15]
[ext_resource path="res://Levels/Level_0/Assets/Player/GunPlayerNaut.png" type="Texture" id=16]
[ext_resource path="res://Levels/Level_0/Assets/Player/LegThighPlayerNaut.png" type="Texture" id=17]
[ext_resource path="res://Levels/Level_0/Assets/Player/LegTendonPlayerNaut.png" type="Texture" id=18]
[ext_resource path="res://Levels/Level_0/Assets/Player/CrusLegPlayerNaut.png" type="Texture" id=19]
[ext_resource path="res://Levels/Level_0/Assets/Player/BodyPlayerNaut.png" type="Texture" id=20]
[ext_resource path="res://Levels/Level_0/Assets/Player/Asset 4PlayerNaut.png" type="Texture" id=21]
[ext_resource path="res://Levels/Level_0/Assets/Player/LeftForeArmPlayerNaut.png" type="Texture" id=22]
[ext_resource path="res://Levels/Level_0/Assets/Player/LeftWristPlayerNaut.png" type="Texture" id=23]
[ext_resource path="res://Levels/Level_0/Scripts/Camera/Camera2D.gd" type="Script" id=24]
[ext_resource path="res://Levels/Level_0/Assets/Environment/BackgroundBackStuff.png" type="Texture" id=25]
[ext_resource path="res://Levels/Level_0/Audio/Energetic_Extreme_Sport_Background_Music_Powerful_Royalty_Free_Music-youtube-Kv6XndX7OFA-251-192.ogg" type="AudioStream" id=26]
[ext_resource path="res://Levels/Level_0/Audio/476740__cjdeets__shot-scifi-powerdown.wav" type="AudioStream" id=27]
[ext_resource path="res://Levels/Level_0/Audio/telecropped.ogg" type="AudioStream" id=28]
[ext_resource path="res://Levels/Level_0/Audio/Xbox One Rare Achievement Sound _ Popup Notification 1s - 3s (MaPDKHgGpEg).ogg" type="AudioStream" id=29]
[ext_resource path="res://Levels/Level_0/Assets/Effects/shield_rotate_it.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": false,
"name": "Discharge",
"speed": 15.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "JumpingUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/RightForeLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.83618, -37.8716 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/RightForeLeg/RightLegCrus:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.69002, 66.1199 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/LeftForeLeg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.13689, 14.7536 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/LeftForeLeg/LeftLegCrus:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -3.14284, -7.61694 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/LeftForeArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 34.7513, 127.745 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/LeftForeArm/LeftWrist:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -29.2153, -69.8235 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/RightForeLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 19.0192, -18.2736, -45.9249, -40.9852, -19.8683, -10.2128, 43.2834, 57.4187 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/RightForeLeg/RightLegCrus:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 85.3053, 107.083, 84.7416, 14.7905, 3.72701, 43.1514, -14.0339, 37.1457 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/LeftForeLeg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -21.23, -12.1631, 22.7838, 49.6262, 14.1244, -50.3479, -57.8137, -53.8938 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/LeftForeLeg/LeftLegCrus:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.428, 35.1626, -11.6357, 40.4393, 98.6071, 107.418, 66.8639, 11.3627 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/LeftForeArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 112.976, 11.2354, -8.00255, -35.9652, -30.0499, -19.4114, 46.9165, 95.566 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/LeftForeArm/LeftWrist:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -91.6123, -25.4187, -66.4932, -70.6797, -67.1953, -14.7426, -50.4188, -61.786 ]
}

[sub_resource type="Animation" id=4]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts/RightForeLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.21228, -4.21228 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyParts/RightForeLeg/RightLegCrus:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7.67524, 7.67524 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyParts/LeftForeLeg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9.60218, 9.60218 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyParts/LeftForeLeg/LeftLegCrus:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.84998, -6.84998 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyParts/LeftForeArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8.87986, -14.2861 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyParts/LeftForeArm/LeftWrist:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.1055, -37.6899 ]
}

[sub_resource type="Animation" id=5]
resource_name = "HitFlickering"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("BodyParts:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": false,
"name": "TeleAfterCharge",
"speed": 40.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "FreezeTime"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 10, 10 ), Vector2( 20, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.705882, 0.905882, 0.717647, 1 ), Color( 0.705882, 0.905882, 0.717647, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Player" type="Node2D"]
editor/display_folded = true
position = Vector2( 586.195, 347.627 )

[node name="PlayerBody2D" type="KinematicBody2D" parent="." groups=[
"Player",
]]
position = Vector2( 78.5752, 178.022 )
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerBody2D"]
visible = false
polygon = PoolVector2Array( -13.5933, 82.294, 20.7636, 82.1154, 20.2809, -43.5941, 12.9878, -43.5574, 12.9235, -77.061, -3.94189, -77.061, -3.94189, -43.0668, -13.6921, -43.0668 )

[node name="BodyParts" type="Node2D" parent="PlayerBody2D"]

[node name="TeleDischarge" type="AnimatedSprite" parent="PlayerBody2D/BodyParts"]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Discharge"
frame = 10

[node name="RightForeArm" type="Sprite" parent="PlayerBody2D/BodyParts"]
editor/display_folded = true
position = Vector2( 17.5564, -36.2833 )
scale = Vector2( 0.35, 0.35 )
z_index = -1
texture = ExtResource( 13 )
offset = Vector2( 43.5862, 0.224487 )

[node name="RightWrist" type="Sprite" parent="PlayerBody2D/BodyParts/RightForeArm"]
position = Vector2( 80.1104, -1.00134 )
texture = ExtResource( 14 )
offset = Vector2( 30, 3 )

[node name="RightPalm" type="Sprite" parent="PlayerBody2D/BodyParts/RightForeArm/RightWrist"]
position = Vector2( 70.0964, 4.00549 )
z_index = 1
texture = ExtResource( 15 )

[node name="Gun" type="Sprite" parent="PlayerBody2D/BodyParts/RightForeArm/RightWrist/RightPalm"]
position = Vector2( 58.05, -28.7048 )
z_index = -1
texture = ExtResource( 16 )
offset = Vector2( 0, 20 )

[node name="ShootTimer" type="Timer" parent="PlayerBody2D/BodyParts/RightForeArm/RightWrist/RightPalm/Gun"]
wait_time = 0.5

[node name="RightForeLeg" type="Sprite" parent="PlayerBody2D/BodyParts"]
editor/display_folded = true
position = Vector2( 12.812, 18.7838 )
rotation = -0.660984
scale = Vector2( 0.35, 0.35 )
z_index = -1
texture = ExtResource( 17 )
offset = Vector2( 11.978, 35.6643 )

[node name="RightTendon" type="Sprite" parent="PlayerBody2D/BodyParts/RightForeLeg"]
position = Vector2( 19.3398, 89.647 )
rotation = -0.181749
z_index = -1
texture = ExtResource( 18 )

[node name="RightLegCrus" type="Sprite" parent="PlayerBody2D/BodyParts/RightForeLeg"]
position = Vector2( 22.513, 96.6077 )
rotation = 1.15401
z_index = -1
texture = ExtResource( 19 )
offset = Vector2( 1.46411, 39.129 )

[node name="Body" type="Sprite" parent="PlayerBody2D/BodyParts"]
position = Vector2( 218.055, -37.5151 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 20 )
offset = Vector2( -614.812, 77.2773 )

[node name="Helmet" type="Sprite" parent="PlayerBody2D/BodyParts"]
position = Vector2( 5.43506, -47.8453 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 21 )
offset = Vector2( -1.93115, -40.5668 )

[node name="LeftForeLeg" type="Sprite" parent="PlayerBody2D/BodyParts"]
editor/display_folded = true
position = Vector2( -10.3207, 17.9649 )
rotation = 0.257499
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 17 )
offset = Vector2( 11.978, 35.664 )

[node name="LeftTendon" type="Sprite" parent="PlayerBody2D/BodyParts/LeftForeLeg"]
position = Vector2( 19.34, 89.647 )
rotation = -0.181514
z_index = -1
texture = ExtResource( 18 )

[node name="LeftLegCrus" type="Sprite" parent="PlayerBody2D/BodyParts/LeftForeLeg"]
position = Vector2( 22.5818, 97.8635 )
rotation = -0.132941
z_index = -1
texture = ExtResource( 19 )
offset = Vector2( 1.464, 39.129 )

[node name="LeftForeArm" type="Sprite" parent="PlayerBody2D/BodyParts"]
editor/display_folded = true
position = Vector2( -15.5276, -36.8023 )
rotation = 2.22957
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 22 )
offset = Vector2( -0.47583, 46.2871 )

[node name="LeftWrist" type="Sprite" parent="PlayerBody2D/BodyParts/LeftForeArm"]
position = Vector2( 5.78101, 85.9159 )
rotation = -1.21865
texture = ExtResource( 23 )
offset = Vector2( 0.526123, 46.2874 )

[node name="Sprite10" type="Sprite" parent="PlayerBody2D/BodyParts"]

[node name="TeleportTimeTimer" type="Timer" parent="PlayerBody2D"]
wait_time = 2.12

[node name="CameraFixerNode" type="Node2D" parent="PlayerBody2D"]
position = Vector2( -3.8147e-006, -4.83386 )

[node name="Camera2D" type="Camera2D" parent="PlayerBody2D/CameraFixerNode"]
current = true
limit_top = -10
limit_bottom = 730
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_right = 0.1
script = ExtResource( 24 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="PlayerBody2D/CameraFixerNode/Camera2D"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="PlayerBody2D/CameraFixerNode/Camera2D/ParallaxBackground"]
position = Vector2( 674.51, 526.688 )
motion_mirroring = Vector2( 1280, 720 )

[node name="Sprite" type="Sprite" parent="PlayerBody2D/CameraFixerNode/Camera2D/ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.54902, 0.662745, 0.898039, 1 )
position = Vector2( -5.30005, -156.352 )
scale = Vector2( 2, 2 )
texture = ExtResource( 25 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerBody2D/CameraFixerNode/Camera2D"]
stream = ExtResource( 26 )
autoplay = true

[node name="Area2D" type="Area2D" parent="PlayerBody2D" groups=[
"Player",
]]
editor/display_folded = true
visible = false
collision_mask = 12

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerBody2D/Area2D"]
visible = false
polygon = PoolVector2Array( -0.451843, -78.7322, 9.58307, -78.7322, 8.74683, -44.4462, 19.618, -43.61, 23.381, -41.1013, 24.2173, 9.0733, 22.963, 14.5089, 14.1824, 22.035, 13.7643, 42.1049, -2.12433, 42.9411, -2.54248, 21.6169, -16.3405, 14.927, -18.0129, 10.3276, -17.5948, -39.0107, -13.8317, -42.3556, -0.869995, -43.61 )

[node name="VulnerableTimer" type="Timer" parent="PlayerBody2D"]

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="PlayerBody2D"]
autoplay = "Running"
anims/JumpingUp = SubResource( 2 )
anims/Running = SubResource( 3 )
anims/Standing = SubResource( 4 )

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="PlayerBody2D"]
anims/HitFlickering = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="PlayerBody2D"]

[node name="AudioShot" type="AudioStreamPlayer2D" parent="PlayerBody2D"]
stream = ExtResource( 27 )
volume_db = 2.0

[node name="AudioTeleport" type="AudioStreamPlayer2D" parent="PlayerBody2D"]
stream = ExtResource( 28 )
volume_db = 10.0

[node name="TimerAudioTeleport" type="Timer" parent="PlayerBody2D"]
wait_time = 0.6

[node name="AudioSave" type="AudioStreamPlayer2D" parent="PlayerBody2D"]
stream = ExtResource( 29 )
volume_db = 10.0

[node name="AudioEnemyHit" type="AudioStreamPlayer2D" parent="PlayerBody2D"]
stream = ExtResource( 27 )
volume_db = 1.0

[node name="TeleportationRemains" type="Node2D" parent="."]
position = Vector2( 73.6398, 168.509 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="TeleportationRemains"]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "TeleAfterCharge"

[node name="TimeEffect" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 87.5715, 157.894 )

[node name="Sprite" type="Sprite" parent="TimeEffect"]
visible = false
modulate = Color( 0.705882, 0.905882, 0.717647, 1 )
rotation = 6.28319
scale = Vector2( 20, 20 )
texture = ExtResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TimeEffect"]
anims/FreezeTime = SubResource( 7 )
[connection signal="timeout" from="PlayerBody2D/BodyParts/RightForeArm/RightWrist/RightPalm/Gun/ShootTimer" to="PlayerBody2D" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="PlayerBody2D/TeleportTimeTimer" to="PlayerBody2D" method="_on_TeleportTimeTimer_timeout"]
[connection signal="area_entered" from="PlayerBody2D/Area2D" to="PlayerBody2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="PlayerBody2D/VulnerableTimer" to="PlayerBody2D" method="_on_VulnerableTimer_timeout"]
[connection signal="screen_exited" from="PlayerBody2D/VisibilityNotifier2D" to="PlayerBody2D" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="PlayerBody2D/TimerAudioTeleport" to="PlayerBody2D" method="_on_TimerAudioTeleport_timeout"]
